@@ -1,6 +1,7 @@
 ver 0.21.9 (not yet released)
 * Android
   - fix crash on ARMv7
+  - request storage permission on Android 6+
 
 ver 0.21.8 (2019/04/23)
 * input
